Add basic integration test and `Login` helper

--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -8,3 +8,6 @@ services:
       dockerfile: mongo.Dockerfile
     ports:
       - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=username
+      - MONGO_INITDB_ROOT_PASSWORD=password
