--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=password
       - FERRETDB_SETUP_USERNAME=username
       - FERRETDB_SETUP_PASSWORD=password
+      - FERRETDB_SETUP_DATABASE=database
+      - FERRETDB_TEST_ENABLE_NEW_AUTH=true
+      - FERRETDB_HANDLER=sqlite
+      - FERRETDB_SQLITE_URL=file:/tmp/
+    volumes:
+      - ./tmp:/tmp
