--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,6 +29,9 @@ tasks:
       - docker compose version
       - >
         docker compose --file=.dev/docker-compose.yml --project-name=wire
+        build --pull
+      - >
+        docker compose --file=.dev/docker-compose.yml --project-name=wire
         up --always-recreate-deps --force-recreate --remove-orphans --renew-anon-volumes --timeout=0 --detach
 
   env-logs:
