--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,7 @@ linters-settings:
 linters:
   disable-all: true
   enable:
+    # TODO https://github.com/FerretDB/wire/issues/4
     - govet
 
 issues:
