--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dockerfile: [ferretdb, mongo]
+        dockerfile: [mongo] # TODO ferretdb
 
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
