Add stubs for testing with FerretDB (#19)

--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -5,9 +5,17 @@ services:
   mongodb:
     build:
       context: .
-      dockerfile: mongo.Dockerfile
+      dockerfile: ${DOCKERFILE:-mongo}.Dockerfile
     ports:
       - 27017:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=username
       - MONGO_INITDB_ROOT_PASSWORD=password
+      - FERRETDB_SETUP_USERNAME=username
+      - FERRETDB_SETUP_PASSWORD=password
+      - FERRETDB_SETUP_DATABASE=database
+      - FERRETDB_TEST_ENABLE_NEW_AUTH=true
+      - FERRETDB_HANDLER=sqlite
+      - FERRETDB_SQLITE_URL=file:/db/
+    volumes:
+      - ./db:/db
