--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,16 +24,21 @@ env:
 
 jobs:
   test:
-    name: Test
+    name: Test ${{ matrix.dockerfile }}
     runs-on: ubuntu-22.04
     timeout-minutes: 15
 
     # Do not run this job in parallel for any PR change or branch push.
     concurrency:
-      group: ${{ github.workflow }}-test-${{ github.head_ref || github.ref_name }}
+      group: ${{ github.workflow }}-test-${{ matrix.dockerfile }}-${{ github.head_ref || github.ref_name }}
       cancel-in-progress: true
 
     if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'not ready')
+
+    strategy:
+      fail-fast: false
+      matrix:
+        dockerfile: [mongo] # TODO ferretdb
 
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
@@ -60,6 +65,8 @@ jobs:
 
       - name: Start development environment
         run: bin/task env-up-detach
+        env:
+          DOCKERFILE: ${{ matrix.dockerfile }}
 
       - name: Run all tests
         run: bin/task test
