--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -88,7 +88,8 @@ tasks:
     desc: "Run benchmarks"
     cmds:
       - go test -list='Benchmark.*' ./...
-      - go test -count=10 -bench=BenchmarkDocument -benchtime={{.BENCH_TIME}} ./wirebson | tee -a new.txt
+      # timeout is needed due to this issue https://github.com/golang/go/issues/69181
+      - go test -count=10 -bench=BenchmarkDocument -benchtime={{.BENCH_TIME}} -timeout=60m ./wirebson | tee -a new.txt
       - bin/benchstat old.txt new.txt
 
   fuzz:
