--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -11,8 +11,20 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=username
       - MONGO_INITDB_ROOT_PASSWORD=password
+
+      - FERRETDB_POSTGRESQL_URL=postgres://username:password@postgres:5432/postgres
       - FERRETDB_SETUP_USERNAME=username
       - FERRETDB_SETUP_PASSWORD=password
       - FERRETDB_SETUP_DATABASE=admin
       - FERRETDB_TEST_ENABLE_NEW_AUTH=true
-      - FERRETDB_HANDLER=sqlite
+
+  postgres:
+    build:
+      context: .
+      dockerfile: postgres.Dockerfile
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=username
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=postgres
