--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,13 +24,13 @@ env:
 
 jobs:
   test:
-    name: Test ${{ matrix.dockerfile }}
+    name: Test ${{ matrix.mongo_dockerfile }}
     runs-on: ubuntu-22.04
     timeout-minutes: 15
 
     # Do not run this job in parallel for any PR change or branch push.
     concurrency:
-      group: ${{ github.workflow }}-test-${{ matrix.dockerfile }}-${{ github.head_ref || github.ref_name }}
+      group: ${{ github.workflow }}-test-${{ matrix.mongo_dockerfile }}-${{ github.head_ref || github.ref_name }}
       cancel-in-progress: true
 
     if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'not ready')
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dockerfile: [mongo, ferretdb1, ferretdb2]
+        mongo_dockerfile: [mongo, ferretdb1, ferretdb2]
 
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
@@ -66,7 +66,8 @@ jobs:
       - name: Start development environment
         run: bin/task env-up-detach
         env:
-          DOCKERFILE: ${{ matrix.dockerfile }}
+          MONGO_DOCKERFILE: ${{ matrix.mongo_dockerfile }}
+          POSTGRES_DOCKERFILE: postgres
 
       - name: Run all tests
         run: bin/task test
