--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,24 +1,32 @@
 ---
-run:
-  timeout: 3m
+linters:
+  disable-all: true
+  enable:
+    # TODO https://github.com/FerretDB/wire/issues/4
+    - asciicheck
+    - gci
+    - goimports
+    - govet
+    - staticcheck
 
 # https://golangci-lint.run/usage/linters/
 linters-settings:
+  # asciicheck
+  gci:
+    sections:
+      - standard
+      - default
+      - prefix(github.com/FerretDB/wire)
+    skip-generated: false
+  goimports:
+    local-prefixes: github.com/FerretDB/wire
   govet:
     enable-all: true
     settings:
       shadow:
         strict: true
   staticcheck:
-    checks:
-      - all
-
-linters:
-  disable-all: true
-  enable:
-    # TODO https://github.com/FerretDB/wire/issues/4
-    - govet
-    - staticcheck
+    checks: [all]
 
 issues:
   max-issues-per-linter: 0
@@ -26,3 +34,6 @@ issues:
 
   exclude-use-default: false
   exclude-rules: []
+
+run:
+  timeout: 3m
