Remove FerretDB v1 from CI

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dockerfile: [mongo, ferretdb1, ferretdb2]
+        # no ferretdb1 due to lack of decimal128 support
+        dockerfile: [mongo, ferretdb2]
 
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
