--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,6 +40,9 @@ jobs:
       matrix:
         dockerfile: [mongo, ferretdb]
 
+    permissions:
+      contents: read
+
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
       - name: Checkout code
@@ -109,6 +112,9 @@ jobs:
       cancel-in-progress: true
 
     if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'not ready')
+
+    permissions:
+      contents: read
 
     steps:
       # TODO https://github.com/FerretDB/github-actions/issues/211
